--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "laravel/passport",
     "description": "Laravel Passport provides OAuth2 server support to Laravel.",
-    "keywords": ["laravel", "passport", "oauth"],
+    "keywords": [
+        "laravel",
+        "passport",
+        "oauth"
+    ],
     "license": "MIT",
     "support": {
         "issues": "https://github.com/laravel/passport/issues",
@@ -27,7 +31,7 @@
         "illuminate/http": "^8.2",
         "illuminate/support": "^8.2",
         "lcobucci/jwt": "^3.4|^4.0",
-        "league/oauth2-server": "^8.2",
+        "league/oauth2-server": "dev-master",
         "nyholm/psr7": "^1.3",
         "phpseclib/phpseclib": "^2.0|^3.0",
         "symfony/psr-http-message-bridge": "^2.0"
@@ -66,7 +70,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/lucadegasperi/oauth2-server"
+            "url": "git@github.com:Bloemendaal/oauth2-server.git"
         }
     ]
 }
