--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "illuminate/http": "^8.2",
         "illuminate/support": "^8.2",
         "lcobucci/jwt": "^3.4|^4.0",
-        "league/oauth2-server": "dev-slowdown",
+        "league/oauth2-server": "dev-master",
         "nyholm/psr7": "^1.3",
         "phpseclib/phpseclib": "^2.0|^3.0",
         "symfony/psr-http-message-bridge": "^2.0"
